fixed calorie chart

--- a/components/calculation/CalorieSection/calorieResult.module.css
+++ b/components/calculation/CalorieSection/calorieResult.module.css
@@ -1,3 +1,8 @@
+.fontStyleTitle {
+  font-family: "Libre Baskerville", serif;
+  font-weight: 700 !important;
+}
+
 .calorieWidth {
   width: 50% !important;
   margin: none;
