implemented recommended diet

--- a/components/calculation/CalorieSection/calorieResult.module.css
+++ b/components/calculation/CalorieSection/calorieResult.module.css
@@ -1,3 +1,7 @@
+.fontSizeSubTitle {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .fontStyleTitle {
   font-family: "Libre Baskerville", serif;
   font-weight: 700 !important;
