--- a/components/calculation/CalorieSection/calorieResult.module.css
+++ b/components/calculation/CalorieSection/calorieResult.module.css
@@ -1,9 +1,9 @@
 .fontSizeSubTitle {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .fontStyleTitle {
-  font-family: "Libre Baskerville", serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: 700 !important;
 }
 
