--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -1,19 +1,19 @@
 .footerLogoFont {
-  font-family: "Ubuntu", sans-serif;
-  font-size: 23px;
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 25px;
   font-weight: 700;
-  letter-spacing: 1.5px;
+  letter-spacing: 1.3px;
 }
 
 .infoFont {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Barlow Condensed", sans-serif;
   font-weight: 500 !important;
-  font-size: 14px;
+  font-size: 15px;
 }
 
 .copyRight {
-  font-family: "Ubuntu", sans-serif;
-  font-size: 14px;
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 15px;
   font-weight: 300;
 }
 
