--- a/components/frontpage/frontpage.module.css
+++ b/components/frontpage/frontpage.module.css
@@ -1,18 +1,44 @@
 .navbarFont {
-  font-family: "Ubuntu", sans-serif;
-  font-size: 23px;
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 25px;
   font-weight: 700;
   letter-spacing: 1.5px;
 }
 
 .linksFont {
-  font-family: "Ubuntu", sans-serif;
-  font-size: 12px;
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 14px;
   letter-spacing: 1.4px;
   text-transform: uppercase;
 }
 
 .embededText {
+  position: absolute;
+  top: 20%;
+  left: 5%;
+  width: 50%;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.image {
+  opacity: 0.6;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+
+.title {
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 5vw;
+
+  text-shadow: 2px 2px 100px black;
+}
+
+.paragraph {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 100 !important;
+}
+/* .embededText {
   position: absolute;
   top: 0%;
   left: 0%;
@@ -23,7 +49,7 @@
     rgba(22, 21, 21, 0.8),
     rgb(234, 233, 233, 0)
   );
-}
+} */
 
 .forBorder {
   font-family: "Libre Baskerville", serif;
@@ -45,16 +71,41 @@
   }
 }
 
-@media (min-width: 200px) and (max-width: 575px) {
+@media (max-width: 767px) {
   .embededText {
-    position: relative;
+    text-align: center;
   }
 }
 
-@media (max-width: 900px) {
-  .navbarFont {
-    font-family: "Libre Baskerville", serif;
-    font-size: 20px !important;
-    font-weight: 700;
+@media (min-width: 576px) and (max-width: 656px) {
+  .embededText {
+    top: 5%;
+  }
+
+  .title {
+    font-size: 6vw;
+  }
+}
+
+@media (min-width: 200px) and (max-width: 575px) {
+  .embededText {
+    position: static;
+    width: 100%;
+    padding: 3rem;
+  }
+
+  .title {
+    font-size: 15vw;
+    text-align: center;
+  }
+
+  .link {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+  }
+
+  .image {
+    display: none !important;
   }
 }
