--- a/components/nutrition/featuredPosts.module.css
+++ b/components/nutrition/featuredPosts.module.css
@@ -1,3 +1,15 @@
 .card {
   width: 18rem;
 }
+
+.cardContainer {
+  width: 100%;
+  margin: auto;
+  justify-content: center;
+}
+
+/* @media screen and (max-width: 1999px) {
+  .cardContainer {
+    width: 80%;
+  }
+} */
