--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -1,8 +1,10 @@
 .navbarFont {
   font-family: "Barlow Condensed", sans-serif;
-  font-size: 25px;
+  font-size: 30px;
   font-weight: 600;
   letter-spacing: 1.3px;
+  color: white;
+  cursor: pointer;
 }
 
 .linksFont {
