implemented the articleid or dynamic route

--- a/components/ui/nutritionHeader.module.css
+++ b/components/ui/nutritionHeader.module.css
@@ -46,7 +46,7 @@
 
 .articleLinks {
   color: white;
-  background: rgba(0, 0, 0, 0);
+
   border: 1px solid white;
   cursor: pointer;
   background: linear-gradient(
@@ -79,4 +79,8 @@
   .unorderedlist {
     width: 80%;
   }
+}
+
+.red {
+  background: rgba(191, 98, 98) 50% !important;
 }
