--- a/components/ui/trainingHeader.module.css
+++ b/components/ui/trainingHeader.module.css
@@ -45,12 +45,12 @@
 /* NUTRITION-ARTICLE-LINKS */
 /* Responsiveness */
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 991px) {
   .unorderedlist {
     display: inline-grid;
     grid-template-columns: auto auto;
     justify-content: center;
-    margin-top: 0px !important;
+    margin-top: 1.5rem !important;
     width: 100%;
   }
 
@@ -64,15 +64,16 @@
 
 .imageContainer {
   position: relative;
-  margin-right: 25px;
+  margin: auto;
+  width: 130px;
 }
 
 .overlay {
   position: absolute;
-  top: 0;
-  left: 0;
-  height: 95%;
-  width: 100%;
+  top: 29%;
+  left: 11.1%;
+  height: 68%;
+  width: 77.5%;
   opacity: 0;
   transition: 0.5s ease-out;
   border-radius: 50%;
@@ -84,13 +85,22 @@
   opacity: 0.6;
 }
 
+@media screen and (max-width: 991px) {
+  .overlay {
+    top: 28.5%;
+    width: 77.5%;
+    left: 11.5%;
+    height: 67.5%;
+  }
+}
+
 /* List Container */
 
 .listContainer {
   background-color: rgb(164, 69, 69);
   position: absolute;
   top: 100%;
-  left: -1%;
+  left: 8%;
   border-radius: 5px;
   font-family: "Barlow Condensed", sans-serif;
   z-index: 2;
@@ -101,9 +111,11 @@
   color: rgb(63, 11, 11) !important;
 }
 
-@media screen and (max-width: 820px) {
-  .listContainer {
-    top: 95%;
-    left: 10%;
-  }
+.muscleTitle {
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 1.6rem;
+  max-width: 75%;
+  margin: auto;
+  margin-bottom: 10px;
+  border-bottom: 2px solid rgb(193, 191, 191);
 }
